# relio

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  latest-deps.yml  publish.yml  release-reminder.yml  security.yml
adr/: index.html
adr/ADR-001-relio-system-architecture/: index.html
adr/ADR-002-storage-backend-strategy/: index.html
adr/ADR-003-provider-capability-negotiation/: index.html
docs/: getting-started.md  index.md  multi-tenancy.md  open-core-seams.md  providers.md  querying.md
docs/adr/: ADR-001-relio-system-architecture.md  ADR-002-storage-backend-strategy.md  ADR-003-provider-capability-negotiation.md  README.md
docs/superpowers/plans/: 2026-06-30-relio-backend-layer.md  2026-06-30-relio-devops-layer.md  2026-06-30-relio-frontend-layer.md  2026-06-30-relio-memory-engine.md
docs/superpowers/specs/: 2026-06-30-relio-agents-design.md  2026-06-30-relio-ai-seam-design.md  2026-06-30-relio-architecture-v2-app-first.md  2026-06-30-relio-auth-design.md  2026-06-30-relio-backend-design.md  2026-06-30-relio-dev-harness-design.md  2026-06-30-relio-devops-design.md  2026-06-30-relio-efficiency-design.md  2026-06-30-relio-exposure-map-design.md  2026-06-30-relio-extraction-design.md  2026-06-30-relio-framework-architecture.md  2026-06-30-relio-frontend-design.md  2026-06-30-relio-graph-design.md  2026-06-30-relio-history-design.md  2026-06-30-relio-llm-optional-design.md  2026-06-30-relio-memory-design.md  2026-06-30-relio-mobile-desktop-design.md  2026-06-30-relio-pg-pool-design.md  2026-06-30-relio-postgres-backend-design.md  2026-06-30-relio-query-design.md  2026-06-30-relio-sdkgen-design.md  2026-06-30-relio-web-template-design.md  2026-07-01-relio-0.2.0-plan.md  2026-07-01-relio-accounts-design.md  2026-07-01-relio-aiapp-design.md  2026-07-01-relio-security-hardening-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ChatView.tsx  MemoryBrowser.tsx
frontend/tests/: ChatView.test.tsx  MemoryBrowser.test.tsx  client.test.ts  smoke.test.tsx
getting-started/: index.html
multi-tenancy/: index.html
open-core-seams/: index.html
providers/: index.html
querying/: index.html
relio/: __init__.py  __main__.py  agents.py  ai.py  exposure.py  graph.py  interchange.py  mcp_server.py  memory.py  migrate.py  recall.py  record.py  render.py  sdkgen.py
relio/accounts/: __init__.py  github.py  google.py  microsoft.py  passwords.py  revocation.py  routes.py  store.py  tokens.py
relio/aiapp/: __init__.py  app.py  routes.py
relio/backends/: base.py  postgres.py  sqlite.py
relio/cli/: check.py  dockerfile.py  main.py  scaffold.py
relio/embedding/: base.py  cache.py  local.py  registry.py
relio/server/: __init__.py  agent.py  app.py  auth.py  config.py  schemas.py  scope.py  security.py  static.py
relio/server/llm/: __init__.py  base.py  claude.py  fake.py  gemini.py  openai.py  registry.py
search/: search_index.json
src/relio/: __init__.py  interchange.py  mcp_server.py  memory.py  recall.py  record.py  render.py
tests/: test_accounts.py  test_accounts_polish.py  test_agent_loop.py  test_agents.py  test_ai_seam.py  test_aiapp.py  test_backend_conformance.py  test_check.py  test_cli.py  test_dockerfile.py  test_efficiency.py  test_embedder_registry.py  test_embedding.py  test_exposure.py  test_extraction.py  test_framework_fixes.py  test_graph.py  test_history.py  test_interchange.py  test_mcp_server.py  test_memory.py  test_migrate.py  test_postgres_backend.py  test_providers.py  test_query.py  test_query_operators.py  test_recall.py  test_record.py  test_render.py  test_scaffold.py  test_sdkgen.py  test_security.py  test_sqlite_backend.py  test_static.py
tests/server/: conftest.py  test_auth.py  test_chat_routes.py  test_claude_provider.py  test_graph_routes.py  test_health.py  test_history_routes.py  test_llm_optional.py  test_memory_routes.py  test_query_routes.py
(+38 files in other folders)
