[project]
name = "relio"
version = "0.1.0"
description = "Relio Memory — unified AI memory engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
local = ["fastembed>=0.3"]
mcp = ["mcp>=1.2"]
server = ["fastapi>=0.110", "uvicorn>=0.30", "anthropic>=0.40", "pydantic-settings>=2.2"]
dev = ["pytest>=8", "fastembed>=0.3", "mcp>=1.2", "fastapi>=0.110", "uvicorn>=0.30", "anthropic>=0.40", "pydantic-settings>=2.2", "httpx>=0.27"]

[project.scripts]
relio = "relio.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relio"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: tests that download models or need optional deps"]
