[project]
name = "relio"
version = "0.1.5"
description = "Relio — app-first AI framework with a built-in, governed memory engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Team Rising Stars", email = "teamerisingstars@gmail.com" }]
keywords = ["ai", "memory", "llm", "framework", "fastapi", "react", "mcp", "rag", "agents", "vector", "pgvector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
local = ["fastembed>=0.3"]
mcp = ["mcp>=1.2"]
postgres = ["psycopg[binary]>=3.1", "psycopg-pool>=3.2"]
server = ["fastapi>=0.110", "uvicorn>=0.30", "anthropic>=0.40", "pydantic-settings>=2.2"]
jwt = ["pyjwt>=2.8"]
accounts = ["relio[server,jwt]", "httpx>=0.27"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=0.3"]
ai = ["relio[server,local,mcp]"]
dev = ["pytest>=8", "pytest-cov>=5", "fastembed>=0.3", "mcp>=1.2", "fastapi>=0.110", "uvicorn>=0.30", "anthropic>=0.40", "pydantic-settings>=2.2", "httpx>=0.27", "pyjwt>=2.8"]

[project.urls]
Homepage = "https://github.com/teamerisingstars/relio"
Repository = "https://github.com/teamerisingstars/relio"
Issues = "https://github.com/teamerisingstars/relio/issues"

[project.scripts]
relio = "relio.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["relio"]
# Non-Python scaffold templates under relio/templates ship automatically because
# they live inside the package directory.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["integration: tests that download models or need optional deps"]
